# python-project-template

./: .additional  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  cookiecutter.json  devNotes.md  pyproject.toml  requirements.txt
.additional/: README.md
.additional/editor/vscode/: .taplo.toml  Makefile
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_integration.py  test_post_gen_project.py  test_pre_gen_project.py
{{ cookiecutter.project_name }}/: .gitignore  Makefile  README.md
{{ cookiecutter.project_name }}/.additional/editor/vscode/: .taplo.toml  Makefile  README.md
{{ cookiecutter.project_name }}/.additional/project_template/{{ cookiecutter.project_name.replace('-', '_') }}/: __init__.py
{{ cookiecutter.project_name }}/_licenses/: apache.txt
{{ cookiecutter.project_name }}/_template/licenses/: mit.txt
{{ cookiecutter.project_name }}/_template/pyproject/: black.toml  coverage.toml  isort.toml  mypy.toml  pylint.toml  pytest.toml  ruff.toml
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name.replace('-', '_') }}/: __main__.py
